--- a/src/components/Bots.astro
+++ b/src/components/Bots.astro
@@ -1,6 +1,6 @@
 ---
 import BotItem from "./BotItem.astro";
-import Header from "./Lib/header.astro";
+import Header from "./Lib/Header.astro";
 ---
 
 <div>
