--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Lib/Footer.astro";
 import Nav from "../components/Nav.astro";
 
 export interface Props {
@@ -20,6 +21,7 @@ const { title } = Astro.props;
   <body>
     <Nav />
     <slot />
+    <Footer />
     <style>
       :root {
         --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
